# usv_libs

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: unit_tests.yml
python/: python_bindings.cpp
src/control/: AITSMC.cpp  AITSMC.h  AITSMC_NEW.cpp  AITSMC_NEW.h  ASMC.cpp  ASMC.h  PID.cpp  PID.h  datatypes.h
src/model/: dynamic_model.cpp  dynamic_model.h
src/perturbances/: wind_and_waves.cpp  wind_and_waves.h
src/utils/: ControllerUtils.cpp  ControllerUtils.h
src/uuv/: uuv_datatypes.h  uuv_dynamic_model.cpp  uuv_dynamic_model.h
test/: aitsmc_test.cpp  asmc_test.cpp  dynamic_model_test.cpp  wind_and_waves_test.cpp
